<resources>
    <string name="title_home">Feed</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>

    <string name="attribution"> Thank for the beautiful icons &amp; images: \n\n
        filter by andriwidodo from the Noun Project\n\n
        Settings by Ron Scott from the Noun Project\n\n
        Location by Rainbow Designs from the Noun Project\n\n
        clear by wayneraymond from the Noun Project\n\n
    </string>
    <string name="search_keyword">Search Keyword</string>
    <string name="location">Location</string>
    <string name="low_price">Low Price</string>
    <string name="high_price">High Price</string>
    <string name="select_category">Select Category</string>
    <string name="select_calibers">Select Calibers</string>
    <string name="search">Search</string>
    <string name="ok">Ok</string>
    <string name="caliber_title">Calibers</string>
    <string name="categories_title">Categories</string>
    <string name="select_action_type">Select Action Type</string>
    <string name="select_firearm_type">Select Firearm Type</string>
    <string name="firearm_type_title">Firearm Type</string>
    <string name="action_type_title">Action Type</string>
    <string name="reset">Reset</string>
    <string name="offer">Offer</string>
    <string name="question_location">Use your location to fill in your location?</string>
    <string name="yes">Yes</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_reset">Reset App</string>
    <string name="attribution_title">Attribution</string>
    <string name="data_policy_title">Data Policy</string>
    <string name="app_data_title">App Data</string>
    <string name="app_settings_title">App Settings</string>
    <string name="about_title">About</string>
    <string name="settings_github">Github</string>
    <string name="settings_review">Review</string>
    <string name="settings_github_summary">Check out the project and contribute!</string>
    <string name="premium_vendor">Premium Vendor</string>
    <string name="settings_feed_layout">Feed Item Style</string>
    <string name="location_missed">Location didn\'t find its shot.</string>
    <string name="geocode_missed">Geocode failed to hit the mark</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="setting_card_wrapped">Card Wrapped</string>
    <string name="settings_summary_card_wrapped_on">Items are wrapped in Cards.</string>
    <string name="settings_summary_card_wrapped_off">Wrap list items in a card.</string>

    <string-array name="themes">
        <item>Auto</item>
        <item>Day</item>
        <item>Night</item>
    </string-array>

    <string-array name="theme_values">
        <item>AUTO</item>
        <item>DAY</item>
        <item>NIGHT</item>
    </string-array>

    <string-array name="feed_layout">
        <item>Large</item>
        <item>Standard</item>
        <item>Small</item>
        <item>Text</item>
    </string-array>

    <string-array name="feed_layout_values">
        <item>LARGE</item>
        <item>STANDARD</item>
        <item>SMALL</item>
        <item>TEXT</item>
    </string-array>


</resources>
