<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/filter_area"
        android:paddingTop="25dp"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:paddingBottom="75dp"
        android:clickable="true"
        android:focusable="true"
>

    <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:cardElevation="6dp"
            android:clickable="false"
            app:cardBackgroundColor="@color/card_view_background"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
        >

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/filter_title"
                      xmlns:tools="http://schemas.android.com/tools"
                      tools:text="Select Caliber"
                      app:layout_constraintTop_toTopOf="parent"
                      style="@style/PrimaryText"
                      android:textColor="@color/colorAccent"
            />

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/filter"
                    app:layout_constraintTop_toBottomOf="@+id/filter_title"
                    android:id="@+id/filter_text_area"
                    android:layout_marginRight="40dp"
                    android:layout_marginEnd="40dp"
            >
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/filter_text"
                        android:inputType="text"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/filter_clear"
                    android:padding="12dp"
                    app:srcCompat="@drawable/ic_clear"
                    android:background="@drawable/ripple_background"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintTop_toTopOf="@id/filter_text_area"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="5dp"
            />

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/filter_recycler"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/filter_text_area"
                    app:layout_constraintBottom_toTopOf="@id/filter_refresh"
            >
            </androidx.recyclerview.widget.RecyclerView>



            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh"
                    style="@style/ArmsTransparentButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/filter_refresh"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    style="@style/ArmsTransparentButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/filter_dismiss"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>